--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 <!--the text that the player sees-->
 	<h1>Week 3 Game</h1>
 <p>guess what I'm thinking</p>
-<p>wins: </p>
-<p>losses: </p>
-<p>guess left: </p>
+<p id="numWins">wins: </p>
+<p id="numLosses">losses: </p>
+<p id="guessesLeft">guess left:9 </p>
 <!--note the guessedLtrs in javascript below-->
 <p id="guessedLtrs">guesses so far: </p>
  
@@ -42,35 +42,55 @@
 	var numWins = 0;
 	var numLosses = 0;
 	var guessedLetters = [];//array to capture user letter input
+	var psychicAns = ""; //generates random answer
+	var userkey = "";
 
-								//js wrapped in squiggly bracket
+	function gameReset () { //function to reset the game
+		guessesLeft = 9;
+		guessedLetters = [];
+		document.getElementById("guessesLeft").innerHTML = "guesses left: 9";
+		document.getElementById("guessedLetters").innerHTML = "guesses so far: ";
+		psychicAns = psychicLetters[Math.floor(Math.random() * psychicLetters.length)]; // generates random answer
+		console.log('the answer is '+psychicAns);//console log the answer
+	}
+
+	// the function below gets called when a hey is pressed and released							 
 	document.onkeyup = function(event) {
-		var userkey = event.key.toLowerCase();
-		guessedLetters = guessedLetters + userkey+", ";
-		console.log(guessedLetters); //log the guessed letters 
-		document.getElementById("guessedLtrs").innerHTML = "guesses so far: " + guessedLetters;
-		var psychicAns = psychicLetters[Math.floor(Math.random() * psychicLetters.length)]; //generates random answer
-		if (yourGuess === psychicAns) {
-			youWin++
-			guessesLeft = 8;
-		}
 		 
 		
 		guessesLeft--;
-		//If the guesses remaining equals 0, you lose, an increment is added to the "Losses" tally and the points restart
-		if (guessesLeft===0) {
-			//alert box pops up
-			alert('you are out of guesses');
-		}	//thinking I don't need this; redundant
-		else(youLose){
-			alert('you lose')
-		}
+		//reduce number of guesses by 1
+		document.getElementById("guessesLeft").innerHTML = "guessesLeft:" +guessesLeft; //update number of guesses on page
 
-		for (i = 0; i <= 8; i++){
-			console.log( [i]);
-		}                              //for loop
-	
-	 }
+		userkey = event.key.toLowercase(); //convert key that was pressed to lower case and save to variable userkey
+			guessedLetters.push(userkey); // add userkey to guessedLetters array
+			document.getElementById("guessedLtrs").innerHTML = "guesses so far: " + guessedLetters; //update guessed letters on page
+
+
+			if (userkey === psychicAns) {
+				alert('You Win');
+			var numWins++;  //adds one to Numwins
+				document.write("numWins"); //update page to show number of wins
+
+				gameReset(); // call function to reset the game
+
+			}
+
+			if (guessesLeft===0){
+				alert('you are out of guesses. try again')
+			var numLosses--; //add one to numLoses variable
+			 	document.write("numLosses"); //update page to show number of losses	
+
+			 	gameReset(); //call function to reset the game
+
+			}
+
+		};
+
+
+		gameReset(); // start game
+
+
 
 	// for (i = 0; i <= 8; i++) { 
 
