adding images and text to readme

--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
 	<title>Psychic-Game</title>
 </head>
 
-<body>
-	<p>Guess what letter I'm thinking of
+<body> 
+
+	<!--<p>Guess what letter I'm thinking of-->
 		<!--each one of these lines gets a p tag-->
-	   Wins"(# of times the user has guessed the letter correctly)
+	<!--<p>Wins"(# of times the user has guessed the letter correctly)</p>
 
-	   Losses" (# of times the user has failed to guess the letter correctly after exhausting all guesses)
+	<p>Losses" (# of times the user has failed to guess the letter correctly after exhausting all guesses)</p>
 
-	   Guesses Left: (# of guesses left. This will update)
+	<p>Guesses Left: (# of guesses left. This will update)</p>   
 
-	   Your Guesses So Far: (the specific letters that the user typed. Display these until the user either wins or loses.)
+	<p>Your Guesses So Far: (the specific letters that the user typed. Display these until the user either wins or loses.)</p>
 
-	   When the player wins, increase the Wins counter and start the game over again (without refreshing the page).
+	<p>When the player wins, increase the Wins counter and start the game over again (without refreshing the page).</p>
 
-	   When the player loses, increase the Losses counter and restart the game without a page refresh (just like when the user wins). </p>
-<!--the text that the player sees-->
-	<h1>Week 3 Game</h1>
+	<p>When the player loses, increase the Losses counter and restart the game without a page refresh (just like when the user wins). </p>
+
+
+	   <!--the text that the player sees-->
+	<strong><h1>Psychic Game</h1></strong>
 <p>guess what I'm thinking</p>
 <p id="numWins">wins: </p>
 <p id="numLosses">losses: </p>
