--- a/index.html
+++ b/index.html
@@ -28,14 +28,20 @@
 
 
 	   <!--the text that the player sees-->
-	<strong><h1>Psychic Game</h1></strong>
-<p>guess what I'm thinking</p>
+	   <div class="title"> 
+	<strong><h1>Psychic Game</h1></strong></div>
+	<br>
+	<br>
+	<br>
+	<br>
+	<div class="text">
+<p>guess what letter I'm thinking</p>
 <p id="numWins">wins: </p>
 <p id="numLosses">losses: </p>
 <p id="guessesLeft">guess left:9 </p>
 <!--note the guessedLtrs in javascript below-->
 <p id="guessedLtrs">guesses so far: </p>
- 
+</div>
 
      <!--setting up the page for javascript-->
 <script type="text/javascript">
